--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -50,7 +50,7 @@
     "react-is": "18.2.0"
   },
   "devDependencies": {
-    "@types/react-is": "^18.2.0",
+    "@types/react-is": "18.2.0",
     "concurrently": "8.0.1"
   },
   "peerDependencies": {
