--- a/package.json
+++ b/package.json
@@ -96,13 +96,13 @@
     "cross-env": "7.0.3",
     "dotenv-cli": "7.2.1",
     "inquirer": "9.2.6",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
     "semver": "7.5.1",
     "ts-node": "10.9.1",
     "tsup": "6.7.0",
     "yargs": "17.7.2",
     "zod": "3.21.4",
-    "zod-to-json-schema": "^3.21.1"
+    "zod-to-json-schema": "3.21.1"
   },
   "engines": {
     "npm": "please-use-yarn",
