--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -128,7 +128,7 @@
     "ts-node": "10.9.1",
     "vite": "4.3.9",
     "whatwg-url": "12.0.1",
-    "ws": "^8.13.0",
+    "ws": "8.13.0",
     "yaml": "2.3.1",
     "yaml-diff-patch": "2.0.0",
     "yargs": "17.7.2",
@@ -149,10 +149,10 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@types/react-inspector": "4.0.2",
-    "@types/react-is": "^18.2.0",
+    "@types/react-is": "18.2.0",
     "@types/serialize-javascript": "5.0.2",
     "@types/whatwg-url": "11.0.0",
-    "@types/ws": "^8.5.4",
+    "@types/ws": "8.5.4",
     "ajv": "8.12.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
