--- a/packages/create-toolpad-app/tsconfig.json
+++ b/packages/create-toolpad-app/tsconfig.json
@@ -3,9 +3,7 @@
     "target": "es2020",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "lib": [
-      "esnext"
-    ],
+    "lib": ["esnext"],
     "isolatedModules": true,
     "strict": true,
     "resolveJsonModule": true,
@@ -16,8 +14,5 @@
     "pretty": true,
     "preserveWatchOutput": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
