--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -67,6 +67,7 @@
     "@tanstack/react-query": "4.29.12",
     "@tanstack/react-query-devtools": "4.29.12",
     "@types/cors": "2.8.13",
+    "@types/node": "20.2.5",
     "@types/react-dev-utils": "9.0.11",
     "@vitejs/plugin-react": "4.0.0",
     "abort-controller": "3.0.0",
@@ -126,6 +127,7 @@
     "ses": "0.18.4",
     "superjson": "1.12.3",
     "ts-node": "10.9.1",
+    "typescript": "5.1.3",
     "vite": "4.3.9",
     "whatwg-url": "13.0.0",
     "ws": "8.13.0",
