--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "jsonlint": "node ./scripts/jsonlint.mjs",
     "release:build": "lerna run --ignore docs --stream build",
     "release:version": "lerna version --exact --no-changelog --no-push --no-git-tag-version",
-    "release:publish": "lerna publish from-package --force-publish --no-git-tag-version --no-push --no-git-reset",
-    "release:publish-canary": "lerna publish from-package  --force-publish --no-git-tag-version --no-push --no-git-reset --pre-dist-tag canary",
+    "release:publish": "lerna publish from-package --force-publish --no-git-tag-version --no-push",
+    "release:publish-canary": "lerna publish from-package  --force-publish --no-git-tag-version --no-push --pre-dist-tag canary",
     "release:changelog": "dotenv -- node ./scripts/releaseChangelog.mjs --repo mui-toolpad",
     "test:build": "lerna run build --scope @mui/toolpad-core --scope @mui/toolpad-components --stream",
     "test:integration": "rm -rf ./node_modules/.vite && playwright test --config ./test/playwright.config.ts",
