Override process.env on env file changes, restore tests

--- a/test/integration/rest-basic/fixture/toolpad/pages/page1/page.yml
+++ b/test/integration/rest-basic/fixture/toolpad/pages/page1/page.yml
@@ -99,7 +99,7 @@ spec:
         headers:
           - name: Authorization
             value:
-              $$env: TEST_ENV_VAR
+              $$env: TEST_VAR
         method: GET
         searchParams: []
         url: https://httpbin.org/get
