--- a/test/integration/backend-basic/fixture/toolpad/pages/page1/page.yml
+++ b/test/integration/backend-basic/fixture/toolpad/pages/page1/page.yml
@@ -93,6 +93,23 @@ spec:
             value:
               $$jsExpression: |
                 `destination: ${manualQuery.data?.parameters?.foo}`
+    - component: PageRow
+      name: pageRow7
+      children:
+        - component: Button
+          name: button1
+          props:
+            content: increment
+            onClick:
+              $$jsExpressionAction: |-
+                await increment.call()
+                getGlobal.refetch()
+        - component: Text
+          name: text
+          props:
+            value:
+              $$jsExpression: |
+                `global value: ${getGlobal.data}`
   queries:
     - name: hello
       query:
@@ -129,3 +146,12 @@ spec:
           value:
             $$jsExpression: |
               "checksum"
+    - name: increment
+      mode: mutation
+      query:
+        function: increment
+        kind: local
+    - name: getGlobal
+      query:
+        function: getGlobal
+        kind: local
