add ts declaration for package and check node version on initial star… (#2124)
Co-authored-by: wuls <linsheng.wu@beantechs.com>

--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -34,7 +34,8 @@
     "@mui/toolpad-utils": "0.1.14",
     "chalk": "5.2.0",
     "execa": "7.1.1",
-    "inquirer": "9.2.7"
+    "inquirer": "9.2.7",
+    "semver": "7.5.1"
   },
   "devDependencies": {
     "@types/inquirer": "9.0.3"
