--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -48,7 +48,8 @@
     "@mui/x-date-pickers": "6.6.0",
     "dayjs": "1.11.8",
     "markdown-to-jsx": "7.2.1",
-    "react-error-boundary": "4.0.9"
+    "react-error-boundary": "4.0.9",
+    "react-hook-form": "7.44.3"
   },
   "devDependencies": {
     "react": "18.2.0"
