--- a/packages/toolpad-utils/package.json
+++ b/packages/toolpad-utils/package.json
@@ -54,7 +54,9 @@
   },
   "gitHead": "9dce9849d6206e511989f97994e20b3143fa927d",
   "dependencies": {
-    "react-is": "18.2.0"
+    "react-is": "18.2.0",
+    "yaml": "2.3.1",
+    "yaml-diff-patch": "2.0.0"
   },
   "devDependencies": {
     "@types/react-is": "18.2.0"
