Allow arbitrary env variables in bindings, use process.env (#2109)

--- a/test/integration/rest-basic/fixture/toolpad/pages/page1/page.yml
+++ b/test/integration/rest-basic/fixture/toolpad/pages/page1/page.yml
@@ -91,7 +91,7 @@ spec:
         searchParams: []
         headers: []
         method: GET
-        transform: "return `query3: Transformed ${data?.url}`"
+        transform: 'return `query3: Transformed ${data?.url}`'
         transformEnabled: true
     - name: queryWithEnv
       query:
