--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -35,7 +35,8 @@
     "chalk": "5.2.0",
     "execa": "7.1.1",
     "inquirer": "9.2.7",
-    "semver": "7.5.1"
+    "semver": "7.5.1",
+    "yargs": "17.7.2"
   },
   "devDependencies": {
     "@types/inquirer": "9.0.3"
