--- a/packages/toolpad-utils/package.json
+++ b/packages/toolpad-utils/package.json
@@ -57,5 +57,6 @@
   },
   "devDependencies": {
     "@types/react-is": "18.2.0"
-  }
+  },
+  "gitHead": "1ca88be01a8dffd9a390ffde8c2a1b4164496b33"
 }
