Remove ts-node for tsx

--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -11,10 +11,10 @@
     "fix": "next lint --fix && prettier --write .",
     "build:cli": "tsup",
     "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
-    "build:typings": "ts-node --esm ./scripts/typings.mts",
+    "build:typings": "tsx ./scripts/typings.mts",
     "dev:cli": "tsup --watch",
     "dev:typings": "yarn build:typings",
-    "waitForApp": "ts-node --esm ./scripts/waitForApp.mts",
+    "waitForApp": "tsx ./scripts/waitForApp.mts",
     "check-types": "tsc --noEmit",
     "test": "jest"
   },
@@ -63,7 +63,6 @@
     "@mui/x-date-pickers": "6.6.0",
     "@mui/x-date-pickers-pro": "6.6.0",
     "@next/bundle-analyzer": "13.4.4",
-    "@swc/wasm": "1.3.62",
     "@tanstack/react-query": "4.29.12",
     "@tanstack/react-query-devtools": "4.29.12",
     "@types/cors": "2.8.13",
@@ -125,7 +124,6 @@
     "serialize-javascript": "6.0.1",
     "ses": "0.18.4",
     "superjson": "1.12.3",
-    "ts-node": "10.9.1",
     "vite": "4.3.9",
     "whatwg-url": "13.0.0",
     "ws": "8.13.0",
