--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dev": "dotenv cross-env FORCE_COLOR=1 lerna -- run dev --stream --parallel --ignore docs",
     "docs:dev": "yarn workspace docs dev",
     "docs:build": "yarn workspace docs build",
-    "docs:build:api": "ts-node --esm ./scripts/docs/buildApi.ts",
+    "docs:build:api": "tsx ./scripts/docs/buildApi.ts",
     "docs:export": "yarn workspace docs export",
     "eslint": "eslint . --report-unused-disable-directives --ext .js,.ts,.tsx",
     "jsonlint": "node ./scripts/jsonlint.mjs",
@@ -41,14 +41,13 @@
     "test": "lerna run test",
     "check-types": "lerna run check-types",
     "toolpad": "toolpad",
-    "jsonSchemas": "ts-node --esm ./scripts/docs/generateJsonSchemas.ts"
+    "jsonSchemas": "tsx ./scripts/docs/generateJsonSchemas.ts"
   },
   "devDependencies": {
     "@jest/globals": "29.5.0",
     "@mui/monorepo": "https://github.com/mui/material-ui.git",
     "@next/eslint-plugin-next": "13.4.4",
     "@playwright/test": "1.34.3",
-    "@swc/helpers": "0.5.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@types/archiver": "5.3.2",
@@ -98,8 +97,8 @@
     "inquirer": "9.2.7",
     "lodash": "4.17.21",
     "semver": "7.5.1",
-    "ts-node": "10.9.1",
     "tsup": "6.7.0",
+    "tsx": "3.12.7",
     "yargs": "17.7.2",
     "zod": "3.21.4",
     "zod-to-json-schema": "3.21.1"
