--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad-app",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "license": "MIT",
   "scripts": {
     "build": "concurrently \"yarn:build:*\" && rimraf ./.next/cache",
@@ -52,9 +52,9 @@
     "@mui/lab": "5.0.0-alpha.133",
     "@mui/material": "5.13.4",
     "@mui/system": "5.13.2",
-    "@mui/toolpad-components": "0.1.14",
-    "@mui/toolpad-core": "0.1.14",
-    "@mui/toolpad-utils": "0.1.14",
+    "@mui/toolpad-components": "0.1.15",
+    "@mui/toolpad-core": "0.1.15",
+    "@mui/toolpad-utils": "0.1.15",
     "@mui/types": "7.2.4",
     "@mui/utils": "5.13.1",
     "@mui/x-data-grid": "6.6.0",
@@ -168,5 +168,6 @@
   "typings": "./index.d.ts",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "1ca88be01a8dffd9a390ffde8c2a1b4164496b33"
 }
