--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -31,8 +31,8 @@
     "toolpad": "./index.cjs"
   },
   "dependencies": {
-    "@mui/toolpad-app": "0.1.14",
-    "@mui/toolpad-core": "0.1.14",
+    "@mui/toolpad-app": "0.1.15",
+    "@mui/toolpad-core": "0.1.15",
     "arg": "5.0.2",
     "concurrently": "8.1.0",
     "dotenv": "16.1.3",
@@ -40,5 +40,6 @@
   },
   "engines": {
     "node": ">=16.14.2"
-  }
+  },
+  "gitHead": "1ca88be01a8dffd9a390ffde8c2a1b4164496b33"
 }
