--- a/examples/npm-stats/toolpad/pages/page/page.yml
+++ b/examples/npm-stats/toolpad/pages/page/page.yml
@@ -4,7 +4,7 @@ spec:
   id: evZC-gp
   title: Default page
   queries:
-    - name: query
+    - name: versionLastweek
       query:
         kind: rest
         url:
@@ -14,25 +14,21 @@ spec:
             )}/last-week`
         headers: []
         method: GET
+        searchParams: []
       parameters:
         - name: package
           value:
             $$jsExpression: |
               textField.value
-    - name: query1
-      query:
-        kind: rest
-        url:
-          $$jsExpression: >
-            `https://api.npms.io/v2/package/${encodeURIComponent(parameters.package)}`
-        headers: []
-        method: GET
-      parameters:
-        - name: package
+        - name: start_date
           value:
             $$jsExpression: |
-              textField.value
-    - name: query2
+              datePicker.value
+        - name: end_date
+          value:
+            $$jsExpression: |
+              datePicker1.value
+    - name: totalRange
       query:
         kind: rest
         url:
@@ -42,6 +38,31 @@ spec:
             }/${encodeURIComponent(parameters.package)}`
         headers: []
         method: GET
+        searchParams: []
+      parameters:
+        - name: package
+          value:
+            $$jsExpression: |
+              textField.value
+        - name: start_date
+          value:
+            $$jsExpression: |
+              datePicker.value
+        - name: end_date
+          value:
+            $$jsExpression: |
+              datePicker1.value
+    - name: downloadsRange
+      query:
+        kind: rest
+        url:
+          $$jsExpression: |
+            `https://api.npmjs.org/downloads/range/${parameters.start_date}:${
+              parameters.end_date
+            }/${encodeURIComponent(parameters.package)}`
+        headers: []
+        method: GET
+        searchParams: []
       parameters:
         - name: package
           value:
@@ -59,47 +80,93 @@ spec:
     - component: PageRow
       name: pageRow
       children:
+        - component: Text
+          name: text1
+          props:
+            value: Enter package name
+            variant: h6
+          layout:
+            columnSize: 0.49074074074074076
         - component: PageColumn
           name: pageColumn
           layout:
-            columnSize: 1
+            columnSize: 1.5092592592592593
           children:
-            - component: DatePicker
-              name: datePicker
-        - component: TextField
-          name: textField
+            - component: PageRow
+              name: pageRow3
+              props:
+                justifyContent: start
+              children:
+                - component: TextField
+                  name: textField
+                  layout:
+                    columnSize: 0.8853503184713376
+                  props:
+                    defaultValue: "@mui/toolpad"
+                - component: Text
+                  name: text2
+                  props:
+                    value: Enter date range
+                    variant: h6
+                  layout:
+                    columnSize: 1.111813296178344
+                - component: DatePicker
+                  name: datePicker
+                  layout:
+                    columnSize: 1.002808487874465
+                  props:
+                    defaultValue: 2023-06-01
+                - component: DatePicker
+                  name: datePicker1
+                  props:
+                    defaultValue: 2023-06-07
     - component: PageRow
       name: pageRow2
       children:
-        - component: DatePicker
-          name: datePicker1
+        - component: codeComponent.LineChart
+          name: codeComponent_LineChart
+          props:
+            data:
+              $$jsExpression: |
+                downloadsRange.data.downloads
+            series:
+              - downloads
     - component: PageRow
-      name: pageRow1
+      name: pageRow5
       children:
+        - component: Text
+          name: text4
+          props:
+            value: Total downloads count for the specified duration
+            variant: body1
         - component: Text
           name: text
           props:
             value:
               $$jsExpression: |
-                query2.data.downloads
-    - component: PageRow
-      name: pageRow3
-      children:
-        - component: Text
-          name: text1
-          props:
-            value: Test 123
+                totalRange.data.downloads
     - component: PageRow
       name: pageRow4
       children:
-        - component: Button
-          name: button
+        - component: Text
+          name: text3
           props:
-            content: Navigate
-            onClick:
-              $$navigationAction:
-                page: BKxS2c8
-                parameters:
-                  param1:
-                    $$jsExpression: |
-                      text1.value
+            value: Version wise data (This is available just for the last week)
+    - component: PageRow
+      name: pageRow6
+      children:
+        - component: DataGrid
+          name: dataGrid
+          props:
+            rows:
+              $$jsExpression: |
+                Object.entries(versionLastweek.data.downloads)
+            columns:
+              - field: "0"
+                type: string
+                headerName: Version
+                width: 160
+              - field: "1"
+                type: number
+                width: 152
+                headerName: No. of downloads
