--- a/test/integration/components/fixture-list/toolpad/pages/list/page.yml
+++ b/test/integration/components/fixture-list/toolpad/pages/list/page.yml
@@ -5,6 +5,17 @@ spec:
   title: list
   content:
     - component: PageRow
+      name: pageRow2
+      children:
+        - component: TextField
+          name: globalTextField
+          props:
+            label: global
+        - component: Text
+          name: globalText
+          props:
+            value: <placeholder>
+    - component: PageRow
       name: pageRow
       children:
         - component: List
@@ -27,4 +38,18 @@ spec:
                       props:
                         value:
                           $$jsExpression: |
-                            textField.value
+                            `${globalTextField.value}:${textField.value}`
+                    - component: Button
+                      name: button
+                      props:
+                        content:
+                          $$jsExpression: |
+                            `set${i}`
+                        onClick:
+                          $$jsExpressionAction: |
+                            text1.value = `set local ${globalTextField.value}:${text.value}`
+                            globalText.value = `set global ${globalTextField.value}:${text.value}`
+                    - component: Text
+                      name: text1
+                      props:
+                        value: <placeholder>
