Consolidate fs utils into single file (#2140)
Signed-off-by: Jan Potoms <2109932+Janpot@users.noreply.github.com>

--- a/packages/toolpad-utils/package.json
+++ b/packages/toolpad-utils/package.json
@@ -53,7 +53,9 @@
     "access": "public"
   },
   "dependencies": {
-    "react-is": "18.2.0"
+    "react-is": "18.2.0",
+    "yaml": "2.3.1",
+    "yaml-diff-patch": "2.0.0"
   },
   "devDependencies": {
     "@types/react-is": "18.2.0"
