--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -47,8 +47,10 @@
     "@mui/x-data-grid-pro": "6.6.0",
     "@mui/x-date-pickers": "6.6.0",
     "dayjs": "1.11.8",
+    "lodash-es": "4.17.21",
     "markdown-to-jsx": "7.2.1",
-    "react-error-boundary": "4.0.9"
+    "react-error-boundary": "4.0.9",
+    "react-hook-form": "7.44.3"
   },
   "devDependencies": {
     "react": "18.2.0"
