Turn all 3282s into $

--- a/test/integration/basic-auth/fixture/toolpad/pages/page1/page.yml
+++ b/test/integration/basic-auth/fixture/toolpad/pages/page1/page.yml
@@ -11,7 +11,7 @@ spec:
           name: typography
           props:
             value:
-              $$jsExpression: |
+              $jsExpression: |
                 `message: ${hello.data.message}`
   queries:
     - name: hello
