--- a/test/integration/bindings/fixture-navigation/toolpad/pages/page2/page.yml
+++ b/test/integration/bindings/fixture-navigation/toolpad/pages/page2/page.yml
@@ -1,13 +1,13 @@
-apiVersion: v1
+apiVersion: v2
 kind: page
 spec:
   id: au03sef
   title: page2
   parameters:
     - name: abc
-      value: "123"
+      value: '123'
     - name: def
-      value: "456"
+      value: '456'
   display: shell
   content:
     - component: PageRow
