fix navigation actions

--- a/test/integration/bindings/fixture-navigation/toolpad/pages/page1/page.yml
+++ b/test/integration/bindings/fixture-navigation/toolpad/pages/page1/page.yml
@@ -12,7 +12,8 @@ spec:
           props:
             onClick:
               $navigationAction:
-                page: au03sef
+                page:
+                  $ref: au03sef
                 parameters:
                   abc: zyx
                   def:
