--- a/test/integration/bindings/fixture/toolpad/pages/encoding/page.yml
+++ b/test/integration/bindings/fixture/toolpad/pages/encoding/page.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: page
 spec:
   id: lWm2sZu
-  title: charset
+  title: Encoding
   display: shell
   content:
     - component: PageRow
@@ -14,3 +14,7 @@ spec:
             value:
               $$jsExpression: |
                 `Can pass utf-8: "€"`
+        - component: Text
+          name: text
+          props:
+            value: 'Can pass double dollars: "$$"'
