--- a/test/integration/backend-basic/fixture/toolpad/pages/serialization/page.yml
+++ b/test/integration/backend-basic/fixture/toolpad/pages/serialization/page.yml
@@ -45,4 +45,4 @@ spec:
           props:
             value:
               $$jsExpression: |
-                `Invalid error: ${invalidError.error.message}`
+                `Invalid error: ${invalidError.error?.message}`
